force-app/main/default/objects/Target_financing_month__c/Target_financing_month__c.object-meta.xml
<CustomObject>
    <description>Object to track invoice financed / Sales / Target</description>
    <label>Target financing</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>FInancing Targets</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets Financing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>