force-app/main/default/objects/Target_financing_month__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <formula>New_invoice_Value__c /  Target_New_invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>