force-app/main/default/objects/Target_financing_month__c/fields/Last_Trigger_Recalculate_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Trigger_Recalculate_Date__c</fullName>
    <label>Last Trigger Recalculate Date</label>
    <type>Date</type>
</CustomField>