force-app/main/default/objects/Target_financing_month__c/fields/New_invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>New_invoice_Value__c</fullName>
    <label>Target New Financing Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>