force-app/main/default/objects/Target_financing_month__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets_Financing</relationshipName>
    <type>Lookup</type>
</CustomField>