force-app/main/default/objects/Target_financing_month__c/fields/Sales_auto__c.field-meta.xml
<CustomField>
    <fullName>Sales_auto__c</fullName>
    <formula>Sales__r.FirstName + &quot; &quot; + Sales__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales (auto)</label>
    <type>Text</type>
</CustomField>