force-app/main/default/objects/Target_financing_month__c/fields/Target_New_invoice__c.field-meta.xml
<CustomField>
    <fullName>Target_New_invoice__c</fullName>
    <description>Target new invoice for this period</description>
    <label>Target New invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>