force-app/main/default/objects/Target_financing_month__c/fields/Target_Total_Financing_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Total_Financing_Value__c</fullName>
    <label>Target Total Financing Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>