force-app/main/default/objects/Target_financing_month__c/listViews/Copy_of_Target_Jan_2022.listView-meta.xml
<ListView>
    <fullName>Copy_of_Target_Jan_2022</fullName>
    <columns>NAME</columns>
    <columns>Sales__c</columns>
    <columns>Target_New_invoice__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>New_invoice_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>3/31/2022</value>
    </filters>
    <label>Target March 2022</label>
    <sharedTo>
        <group>Head_of_Department</group>
    </sharedTo>
</ListView>